chore: Prevented wrapping of 'value' cells in chart tables

--- a/front-end-components/src/index.css
+++ b/front-end-components/src/index.css
@@ -414,3 +414,7 @@
 ul.autocomplete__menu {
   font-family: "GDS Transport";
 }
+
+.govuk-table__cell.table-cell-value {
+  white-space: nowrap;
+}
